--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     </head>
 
     <body>
-        <h1>Battleship</h1>
-        
-        <div id="container">
+        <h1 >Battleship</h1>
+        <div>
+            <div class="grid-container human">
+                <h2>Your Board</h2>
+                <div class="grid"></div>
+            </div>
+            <div class="grid-container computer">
+                <h2>Computer Board</h2>
+                <div class="grid"></div>
+            </div>
+        </div>
         <script src="grid.js"></script>
-    </div>
     </body>
 </html>
