--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>Battleship</title>
+        <title>Battleship Login</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1 >Battleship</h1>
-        <div>
-            <div class="grid-container human">
-                <h2>Your Board</h2>
-                <div class="grid"></div>
-            </div>
-            <div class="grid-container computer">
-                <h2>Computer Board</h2>
-                <div class="grid"></div>
-            </div>
-        </div>
-        <script src="grid.js"></script>
+        <a href = "game.html">Move to Game Page</a>
     </body>
 </html>
