Added functionality to interact with backend, only for one set user now though

--- a/game.html
+++ b/game.html
@@ -30,6 +30,7 @@
         <div id = "resultarea"></div>
         <script type= "module" src = "board.js"></script>
         <script type= "module" src = "computer.js"></script>
+        <script src="node_modules/axios/dist/axios.js"></script>
         <script type = "module" src="renderBoards.js"></script>
     </body>
 </html>
