--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Battleship Login</title>
-        <link rel="stylesheet" href="game.css">
+        <link rel="stylesheet" href="login.css">
     </head>
 
     <body>
+        <h1>Welcom to Battleship!</h1>
+        <h2>Log in Below</h2>
+        <div id = "loginarea"></div>
         <a href = "game.html">Move to Game Page</a>
+        <script type= "module" src = "login.js"></script>
+        <script src="node_modules/axios/dist/axios.js"></script>
     </body>
 </html>
