created leaderboard skeleton, needs styling and search

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
 
     <body>
-        <a href = "game.html">Move to Game Page</a>
+        <a href = "leaderboard.html">Move to Game Page</a>
     </body>
 </html>
