Login page functionality works and passes on to game page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     </head>
 
     <body>
-        <h1>Welcom to Battleship!</h1>
+        <h1>Welcome to Battleship!</h1>
         <h2>Log in Below</h2>
         <div id = "loginarea"></div>
-        <a href = "game.html">Move to Game Page</a>
         <script type= "module" src = "login.js"></script>
         <script src="node_modules/axios/dist/axios.js"></script>
     </body>
