--- a/game.html
+++ b/game.html
@@ -10,6 +10,11 @@
 
     <body>
         <h1 >Battleship</h1>
+        <nav>
+            <div class = "navbar"><a href = "./game.html">Game</a></div>
+            <div class = "navbar"><a href = "./leaderboard.html">Leaderboard</a></div>
+            <div class = "logout"><button id = "logout">Logout</button></div>
+        </nav>
         <div id = "gamearea">
             <div id = "computer" class = "side">
                 <div class="grid-container">
