--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" href="styling.css"/>
     </head>
     <body>
+        <nav>
+            <div class = "navbar"><a href = "./game.html">Game</a></div>
+            <div class = "navbar"><a href = "./leaderboard.html">Leaderboard</a></div>
+            <div class = "logout"><button id = "logout">Logout</button></div>
+        </nav>
         <div id="dope">
         </div>
     </body>
