--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,12 +11,16 @@
         <link rel="stylesheet" href="styling.css"/>
     </head>
     <body>
+        <div id = "searcharea">
+            <input type = "text" id = "searchbox">
+        </div>
         <div id="dope">
         </div>
     </body>
     <!-- Include links to JavaScript files below -->
     <script src="node_modules/axios/dist/axios.js"></script>
     <script src="leaderboard.js"></script>
+    <script src="autcompletesearch.js"></script>
 
 </body>
 </html>
