integrated search bar

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,9 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
         <title>Leaderboard</title>
- 
-        <!-- Include links to CSS stylesheets below -->
-        <!--<link rel="stylesheet" href="style.css"/> -->
         <link rel="stylesheet" href="styling.css"/>
     </head>
     <body>
@@ -16,8 +13,9 @@
             <div class = "navbar"><a href = "./leaderboard.html">Leaderboard</a></div>
             <div class = "logout"><button id = "logout">Logout</button></div>
         </nav>
+        <h1>Leaderboard</h1>
         <div id = "searcharea">
-            <input type = "text" id = "searchbox">
+            <input type = "text" id = "searchbox" placeholder="Search for User">
         </div>
 
         <div id="dope">
@@ -26,7 +24,5 @@
     <!-- Include links to JavaScript files below -->
     <script src="node_modules/axios/dist/axios.js"></script>
     <script src="leaderboard.js"></script>
-    <script src="autcompletesearch.js"></script>
-
 </body>
 </html>
