changed axios path

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <h2>Log in Below</h2>
         <div id = "loginarea"></div>
         <script type= "module" src = "login.js"></script>
-        <script src="node_modules/axios/dist/axios.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </body>
 </html>
