--- a/leaderboard.html
+++ b/leaderboard.html
@@ -22,7 +22,7 @@
         </div>
     </body>
     <!-- Include links to JavaScript files below -->
-    <script src="node_modules/axios/dist/axios.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="leaderboard.js"></script>
 </body>
 </html>
