--- a/leaderboard.html
+++ b/leaderboard.html
@@ -14,9 +14,10 @@
             <div class = "logout"><button id = "logout">Logout</button></div>
         </nav>
         <h1>Leaderboard</h1>
-        <div id = "searcharea">
+        <form id = "searcharea">
             <input type = "text" id = "searchbox" placeholder="Search for User">
-        </div>
+            <button type = "button" id = "clearbutton" >Clear Results</button>
+        </form>
 
         <div id="dope">
         </div>
