slight changes to leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,7 @@
         <h1>Leaderboard</h1>
         <form id = "searcharea">
             <input type = "text" id = "searchbox" placeholder="Search for User">
-            <button type = "button" id = "clearbutton" >Clear Results</button>
+            <button type = "button" id = "clearbutton" >Clear Search</button>
         </form>
 
         <div id="dope">
