maybe now login will work

--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href = "./game.html">Game</a></li>
                 <li><a href = "./leaderboard.html">Leaderboard</a></li>
-                <li><a id = "logout" href ="/index.html">Logout</a></li>
+                <li><a id = "logout" href = "./">Logout</a></li>
             </ul>
         </nav>
         <div id = "gamearea">
