--- a/leaderboard.html
+++ b/leaderboard.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href = "./game.html">Game</a></li>
                 <li><a href = "./leaderboard.html">Leaderboard</a></li>
-                <li><a id = "logout" href ="/index.html">Logout</a></li>
+                <li><a id = "logout" href = "./">Logout</a></li>
             </ul>
         </nav>
         <form autocomplete="off" id = "searcharea">
