fixed bugs from last night

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Welcome to Battleship!</h1>
-        <h2>Log in Below</h2>
+        <h2 id = "subtitle"></h2>
         <div id = "loginarea"></div>
         <script type= "module" src = "login.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
