--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Battleship Login</title>
         <link rel="stylesheet" href="login.css">
+        <link rel="icon" href="icons8-battleship-24.png"> 
+        <!--<a target="_blank" href="https://icons8.com/icons/set/battleship">Battleship icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     </head>
 
     <body>
