--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,6 +6,8 @@
  
         <title>Leaderboard</title>
         <link rel="stylesheet" href="styling.css"/>
+        <link rel="icon" href="icons8-battleship-24.png"> 
+        <!--<a target="_blank" href="https://icons8.com/icons/set/battleship">Battleship icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     </head>
     <body>
         <h1>Battleship</h1>
