--- a/game.html
+++ b/game.html
@@ -6,6 +6,8 @@
 
         <title>Battleship Game</title>
         <link rel="stylesheet" href="game.css">
+        <link rel="icon" href="icons8-battleship-24.png"> 
+        <!--<a target="_blank" href="https://icons8.com/icons/set/battleship">Battleship icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
     </head>
 
     <body>
